--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "firebase": "^9.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.0.3",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.8",
     "swiper": "^8.4.2",
     "web-vitals": "^2.1.4"
   },
